--- a/src/app/glimpse/glimpse.component.css
+++ b/src/app/glimpse/glimpse.component.css
@@ -3,7 +3,7 @@
     background-size: cover;
     /* background-position: center; */
     background-repeat: no-repeat;
-    min-height: 90vh; 
+    min-height: 100vh; 
     color: white;
     font-family: "Roboto", sans-serif;
   }
@@ -43,15 +43,16 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 22px;
   }
   .card {
     background-color: rgba(0, 0, 0, 0.7);
-   color: white;
+    color: white;
     margin: 10px;
     height: 200px;
     width: 90%;
   }
-    
+
 .card-title {
     font-size: 24px;
     font-weight: 600;
