added "More" for additional results

--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -2,7 +2,7 @@
     <div class="explore-header">
       <div class="genre-dropdown">
         <label for="subject" class="title">Select a Genre:</label>
-        <select class ="form-select" id="genre-select" [(ngModel)]="selectedSubject" name="subject" (change)="onSubjectSelected()">
+        <select class ="form-select" id="genre-select" [(ngModel)]="selectedSubject" name="subject" (change)="reset(); onSubjectSelected()">
           <option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</option>
         </select>
       </div>
@@ -31,6 +31,10 @@
         </div>
       </div>
     </div>
+    <button class="btn btn-primary" (click)="moreresults()">More</button>
+
+
+
     
   
 </div>
