--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,8 @@
                 <a class="nav-link " aria-current="page" routerLink="/glimpse" routerLinkActive="active">Glimpse</a>
                 <a class="nav-link " aria-current="page" routerLink="/aboutus" routerLinkActive="active">About Us</a>
                 <div class="username">
-                    <i class="fa fa-user u-icon" aria-hidden="true" routerLink="/readlist"></i>
-                    <span>Hello, User!</span>
+                    <i class="fa fa-user u-icon" aria-hidden="true" (click)="showUser()"></i>
+                    <span [ngStyle]="{'display': isUserShow ? 'block' : 'none'}">Hello, {{user}}!</span>
                 </div>
                 <div class="wish-list">
                     <i class="fa fa-heart" aria-hidden="true" routerLink="/readlist"></i>
