--- a/src/app/readlist/readlist.component.html
+++ b/src/app/readlist/readlist.component.html
@@ -1,1 +1,23 @@
-<p>readlist works!</p>
+<div class="main">
+    <h1 class="rl-title">Your Readlist</h1>
+
+    <div class="container">
+        <div class="card">
+          <div class="row">
+            <div class="col-md-3">
+                <a href="#" target="_blank">
+                  <img src="" class="card-img-top" alt="Book Image">
+                </a>
+            </div>
+            <div class="col-md-9">
+              <div class="card-body">
+                <h5 class="card-title">Book Title</h5>
+                <p class="card-subtitle mb-2">Author</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+</div>
