--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,11 @@
                 <a class="nav-link " aria-current="page" routerLink="/glimpse" routerLinkActive="active">Glimpse</a>
                 <a class="nav-link " aria-current="page" routerLink="/aboutus" routerLinkActive="active">About Us</a>
                 <div class="username">
-                    <i class="fa fa-user u-icon" aria-hidden="true" routerLink="/readlist"></i>
+                    <i class="fa fa-user u-icon" aria-hidden="true"></i>
                     <span>Hello, User!</span>
                 </div>
                 <div class="wish-list">
-                    <i class="fa fa-heart" aria-hidden="true" routerLink="/readlist"></i>
+                    <i class="fa fa-heart" aria-hidden="true" routerLink="/readlist" routerLinkActive="rl-active"></i>
                 </div>
             </div>
         </div>
