--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,3 +10,60 @@
     object-fit: cover;
     /* border: 5px solid red; */
 }
+.trending {
+    padding: 50px;
+    background-color: rgb(34, 34, 34);
+}
+
+.trending h1 {
+    font-family: roboto;
+    font-weight: 600;
+    font-size: 50px;
+    margin-bottom: 75px;
+    color:rgb(255, 255, 255);
+    border-bottom: 4px solid;
+    border-image: linear-gradient(to left, #ff9292, #723d3d) 1;
+    width:fit-content;
+}
+
+.card {
+    color: white;
+    display: inline-block;
+    width: 400px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    font-family: roboto;
+    background-color: rgb(48, 48, 48);
+    min-height: 300px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+} 
+
+
+.card:hover {
+    transform: scale(1.025);
+}
+
+.card-img-top{
+    margin-top: 25px;
+    height:400px;
+    object-fit:contain;
+
+}
+
+.card-title {
+    text-transform: uppercase;
+    font-size: 25px;
+    color: white;
+}
+
+.author {
+    font-size: 17px;
+    color: rgb(179, 177, 177);
+    padding-bottom: 20px;
+}
+
+.card-text {
+    font-size: 17px;
+    font-weight: 300;
+}
