--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
               <button class="btn btn-primary" (click)="login()">Login</button>
-              <button class="btn btn-secondary" (click)="signup2()">Sign Up</button>
+              <button class="btn btn-secondary" (click)="signup()">Sign Up</button>
             </div>
           </form>
         </div>
