--- a/src/app/readlist/readlist.component.css
+++ b/src/app/readlist/readlist.component.css
@@ -1,43 +1,50 @@
 .main {
-    background-image: url('../../assets/image2.png');
-    background-size: cover;
-    /* background-position: center; */
-    background-repeat: no-repeat;
-    min-height: 100vh; 
-    color: white;
-    font-family: "Roboto", sans-serif;
-    padding: 30px;
-  }
+  background-image: url('../../assets/image2.png');
+  background-size: cover;
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  padding: 30px;
+}
 
-  .rl-title {
-    font-size: 40px;
-    font-weight: 600;
-    text-align: center;
-  }
-  .container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 22px;
-  }
-  .card {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    margin: 10px;
-    height: 200px;
-    width: 90%;
-  }
+.rl-title {
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 22px;
+}
+
+.card {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  margin: 10px;
+  height: 200px;
+  width: 90%;
+}
 
 .card-title {
-    font-size: 24px;
-    font-weight: 600;
-  }
-  
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.card img {
+  max-height: 200px;
+  object-fit: contain;
+}
+
 .card-subtitle {
-    font-size: 18px;
-    color: rgb(148, 148, 148);
-  }
-  
+  font-size: 18px;
+  color: rgb(148, 148, 148);
+}
+
 .card-text {
-    font-size: 16px;
-  }
+  font-size: 16px;
+}
