--- a/src/app/glimpse/glimpse.component.css
+++ b/src/app/glimpse/glimpse.component.css
@@ -47,11 +47,12 @@
     margin-top: 22px;
   }
   .card {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.65);
+    border-radius: 20px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
     color: white;
     margin: 10px;
-    height: 200px;
+    min-height: 200px;
     width: 90%;
   }
 
@@ -66,5 +67,5 @@
   }
   
 .card-text {
-    font-size: 16px;
+    font-size: 18px;
   }
