--- a/src/app/readlist/readlist.component.html
+++ b/src/app/readlist/readlist.component.html
@@ -15,6 +15,7 @@
               <p class="card-subtitle mb-2">
                 <strong>Author(s):</strong> {{ book.authors }}
               </p>
+              <button class="btn btn-primary" (click)="deleteFromWishlist(book.title, book.authors)">Delete</button>
             </div>
           </div>
         </div>
