--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
             <div class="navbar-nav">
                 <a class="nav-link " aria-current="page" routerLink="/home" routerLinkActive="active" >Home</a>
                 <a class="nav-link " aria-current="page" routerLink="/explore" routerLinkActive="active">Explore</a>
-                <a class="nav-link " aria-current="page" routerLink="/glimpse" routerLinkActive="active">Glimpse</a>
+                <a class="nav-link " aria-current="page" routerLink="/glimpse" routerLinkActive="active">AuthorVerse</a>
                 <a class="nav-link " aria-current="page" routerLink="/aboutus" routerLinkActive="active">About Us</a>
                 <div class="username">
                     <i class="fa fa-user u-icon" aria-hidden="true"></i>
