--- a/src/app/readlist/readlist.component.css
+++ b/src/app/readlist/readlist.component.css
@@ -48,3 +48,16 @@
 .card-text {
   font-size: 16px;
 }
+
+ .btn {
+  background-color: #dfdfdf;
+  color: black;
+  font-size: 16px;
+  font-weight: 400;
+  border:none;
+}
+
+ .btn:hover {
+  background-color: #8d8d8d;
+  color:white;
+}
