--- a/src/app/explore/explore.component.css
+++ b/src/app/explore/explore.component.css
@@ -54,9 +54,10 @@
     flex-wrap: wrap;
   }
   .book-cards .card {
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0,0.7);
+    background-color: rgba(0, 0, 0, 0.65);
+    box-shadow: 5px 5px 10px rgba(54, 54, 54, 0.7);
     color: white;
+    border-radius: 20px;
     margin: 10px;
     height: 200px;
     width: 80%;
