--- a/src/app/glimpse/glimpse.component.css
+++ b/src/app/glimpse/glimpse.component.css
@@ -1,11 +1,8 @@
 .main {
-    background-image: url('../../assets/image2.png');
-    background-size: cover;
-    background-position: center;
-    /* background-color:rgb(51, 59, 68); */
-    background-repeat: repeat;
+    background-color:rgb(51, 59, 68);
     min-height: 100vh; 
     color: white;
+    padding: 10px;
     font-family: "Roboto", sans-serif;
   }
   .search-bar{
@@ -49,7 +46,7 @@
   .card {
     background-color: rgba(0, 0, 0, 0.65);
     border-radius: 20px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+    box-shadow: 5px 5px 10px rgba(54, 54, 54, 0.7);
     color: white;
     margin: 10px;
     min-height: 200px;
@@ -71,6 +68,7 @@
   }
   
   .card img {
+    justify-content: center;
     max-height: 200px;
     object-fit: contain;
   }
