--- a/src/app/readlist/readlist.component.css
+++ b/src/app/readlist/readlist.component.css
@@ -1,8 +1,5 @@
 .main {
-  background-image: url('../../assets/image2.png');
-  background-size: cover;
-  /* background-position: center; */
-  background-repeat: no-repeat;
+  background-color: #343a40;
   min-height: 100vh;
   color: white;
   font-family: "Roboto", sans-serif;
@@ -23,8 +20,10 @@
 }
 
 .card {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.65);
+  box-shadow: 5px 5px 10px rgba(54, 54, 54, 0.7);
   color: white;
+  border-radius: 20px;
   margin: 10px;
   height: 200px;
   width: 90%;
