--- a/src/app/glimpse/glimpse.component.css
+++ b/src/app/glimpse/glimpse.component.css
@@ -1,74 +1,92 @@
 .main {
-    background-color:rgb(51, 59, 68);
-    min-height: 100vh; 
-    color: white;
-    padding: 10px;
-    font-family: "Roboto", sans-serif;
-  }
-  .search-bar{
-    padding-top: 40px;
-    text-align: center;
-  }
-  
-  .search-input {
-    width: 50%;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 10px;
-    outline:none
-  }
-  .search-input:focus{
-    outline: 2px solid rgb(147, 153, 156);
-  }
-  
-  .search-btn {
-    background-color:transparent;
-    border: 2px solid white;
-    color: white;
-    padding: 7px 20px;
-    margin-left: 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 10px;
-    transition: all 0.15s ease-in-out;
-  }
-  .search-btn:hover{
-    background-color: white;
-    color:#212529;
-  }
-  .container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 22px;
-  }
-  .card {
-    background-color: rgba(0, 0, 0, 0.65);
-    border-radius: 20px;
-    box-shadow: 5px 5px 10px rgba(54, 54, 54, 0.7);
-    color: white;
-    margin: 10px;
-    min-height: 200px;
-    width: 90%;
-  }
+  background-color: rgb(51, 59, 68);
+  min-height: 100vh;
+  color: white;
+  padding: 10px;
+  font-family: "Roboto", sans-serif;
+}
+
+.search-bar {
+  padding-top: 40px;
+  text-align: center;
+}
+
+.search-input {
+  width: 50%;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+  outline: none
+}
+
+.search-input:focus {
+  outline: 2px solid rgb(147, 153, 156);
+}
+
+.search-btn {
+  background-color: transparent;
+  border: 2px solid white;
+  color: white;
+  padding: 7px 20px;
+  margin-left: 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: all 0.15s ease-in-out;
+}
+
+.search-btn:hover {
+  background-color: white;
+  color: #212529;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 22px;
+}
+
+.card {
+  background-color: rgba(0, 0, 0, 0.65);
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px rgba(54, 54, 54, 0.7);
+  color: white;
+  margin: 10px;
+  min-height: 200px;
+  width: 90%;
+}
 
 .card-title {
-    font-size: 24px;
-    font-weight: 600;
-  }
-  
+  font-size: 24px;
+  font-weight: 600;
+}
+
 .card-subtitle {
-    font-size: 18px;
-    color: rgb(148, 148, 148);
-  }
-  
+  font-size: 18px;
+  color: rgb(148, 148, 148);
+}
+
 .card-text {
-    font-size: 16px;
-  }
-  
-  .card img {
-    justify-content: center;
-    max-height: 200px;
-    object-fit: contain;
-  }
+  font-size: 16px;
+}
+
+.card img {
+  justify-content: center;
+  max-height: 200px;
+  object-fit: contain;
+}
+
+.btn {
+  background-color: #dfdfdf;
+  color: black;
+  font-size: 16px;
+  font-weight: 400;
+  border: none;
+}
+
+.btn:hover {
+  background-color: #8d8d8d;
+  color: white;
+}
